--- a/introduction.tex
+++ b/introduction.tex
@@ -28,10 +28,10 @@ If \acid{Y}{397} is phosphorylated, it becomes a suitable binding site for SH2 o
 \\
 Mechanical forces can lead to dissociation of the FERM domain from the kinase as well. Forces acting on the FAT domain are transduced to the interface of the FERM domain and the kinase because the linker is connected to the kinase, while the FERM domain is anchored onto a \pip{} containing membrane. These forces can lead to activation of FAK. In that way, it is acting as a mechanical sensor \autocite{pap004}.\\
 \\
-The binding sites on the side of the kinase were identified by computer simulations \autocite{pap002} and have been confirmed recently in experiments \autocite{pap002Exp}. The findings from \textcite{pap002Exp} show that these residues are required for catalytic activity of the kinase, and that they bind to phospholipids \textit{in vivo}. However, since the catalytic activity is not regulated by \pip{}, this binding was hypothesized to act as a stabilisation of the active state only \autocite{pap002Exp}.
+The binding sites on the side of the kinase were identified via computer simulations \autocite{pap002} and have been confirmed recently in experiments \autocite{pap002Exp}. The findings from \textcite{pap002Exp} show that these residues are required for catalytic activity of the kinase, and that they bind to phospholipids \textit{in vivo}. However, since the catalytic activity is not regulated by \pip{}, this binding was hypothesized to act as a stabilisation of the active state only \autocite{pap002Exp}.
 \section{Dimerization, clustering and autophosphorylation}
 \label{intro:clustering}
-Autophosphorylation of \acid{Y}{397} is an important event in FAK activation. It has been shown that this happens in intact cells \textit{in trans}, for which a self-association of FAK is required \autocite{transAuto}.\\
+Autophosphorylation of \acid{Y}{397} is an important step in FAK activation. It has been shown that this happens in intact cells \textit{in trans}, for which a self-association of FAK is required \autocite{transAuto}.\\
 \\
 The FERM domain induces a dimerization of FAK by interacting with the FERM domain of a neighbouring FAK molecule. The interaction emerges around \acid{W}{266} in the connected FERM domains and is stabilised by an interaction of the FAT domain with the basic patch of the other FERM domain, respectively. The presence of \acid{W}{266} is also required for autophosphorylation of FAK.\\
 \pip{} is not needed for the dimerization of the FERM domains. However, an enriched FAK concentration is needed to observe FAK dimers in cells, which is the case at FAs. It is still unclear how the dimer is stabilised at membranes, where the basic patch is also required for ligand binding \autocite{fakdimers}.\\
