--- a/results/multiProtInteractions.tex
+++ b/results/multiProtInteractions.tex
@@ -71,7 +71,7 @@ From these observations, the conclusion can be drawn that the preferred arrangem
 Lastly, the impact of clustering on FAK activation is addressed. Since activation means the dissociation of the FERM domain from the kinase, we analysed our data with respect to the CA values, $d_\text{F1-N}$ and $d_\text{F2-C}$.\\
 Unfortunately, in no FAK molecule did a full dissociation take place at any time. In addition, the CA values seem to be independent of the number of neighbours, the interaction type and the clustersize. Because only a small number of FAK molecules was put into the system and the clustering process was not finished at the end of the simulations, this does not mean that activation due to clustering is impossible. In the hope of seeing trends regarding to activation, a more detailed analysis for the different proteins was performed.\\
 \\
-Motivated from \autoref{mult:oligs}, we focus on FAK molecules inside chains. A FAK molecule can be seen as a chain member if it has exactly two neighbours and if these neighbours are not neighbours of one another. For FK chains, only type 3 interactions were allowed, for FFKK chains both, type 1 and type 2. We compare the results for FK chains and FFKK chains to FAK-MEM (see \autoref{mult:fk_ca} and \autoref{mult:ff_ca}, respectively).\\
+Motivated by \autoref{mult:oligs}, we focus on FAK molecules inside chains. A FAK molecule can be seen as a chain member if it has exactly two neighbours and if these neighbours are not neighbours of one another. For FK chains, only type 3 interactions were allowed, for FFKK chains both, type 1 and type 2. We compare the results for FK chains and FFKK chains to FAK-MEM (see \autoref{mult:fk_ca} and \autoref{mult:ff_ca}, respectively).\\
 \autoref{mult:fk_ca} indicates that an arrangement of FAK molecules to FK chains does not influence the mean value of CA. The distribution gets slightly sharper compared to FAK-MEM, which could imply a stabilisation of the interface. Not even the distributions of $d_\text{F1-N}$ and $d_\text{F2-C}$ differ noticeably from those obtained in FAK-MEM.\\
 Neither does an arrangement into FFKK chains affects the value of CA (\autoref{mult:ff_ca}) significantly. However, the distribution of $d_\text{F1-N}$ indicates a trend to larger values in comparison to FAK-MEM, which are linked to a more open state of FAK.\\
 \\
