(probably not) the last final version.

--- a/Paper.bib
+++ b/Paper.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Max Simon at 2017-08-16 14:19:04 +0200 
+%% Created for Max Simon at 2017-08-17 16:08:36 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -475,9 +475,9 @@
 	Year = {1998}}
 
 @article{berendsen,
-	Author = {Berendsen, HJC and POSTMA, JPM and VANGUNSTEREN, WF and DINOLA, A and HAAK, [No Value]},
+	Author = {Berendsen, H.J.C. and POSTMA, JPM and VANGUNSTEREN, WF and DINOLA, A and HAAK, [No Value]},
 	Date-Added = {2017-06-19 22:45:55 +0000},
-	Date-Modified = {2017-08-16 12:02:07 +0000},
+	Date-Modified = {2017-08-17 14:08:36 +0000},
 	Journal = {Journal of Chemical Physics},
 	Number = {8},
 	Pages = {3684-3690},
