--- a/conclusion.tex
+++ b/conclusion.tex
@@ -3,7 +3,7 @@ The aim of the present work was to gain insight into conformational changes of F
 \\
 Previous work in the group revealed unnatural behaviour of FAK bound to a \pip{}-containing membrane in \martini{} simulations, namely, a falling sidewards on the membrane. We were able to prove that this is not induced by an underestimation of \pip{} binding at the basic patch. Indeed, \martini{} was able to reproduce the free energy profile of this binding obtained from a reference simulation in \charmm{} remarkably well. However, the cause of the falling is still an outstanding question and should be addressed in further studies.\\ % FDA?
 \\
-In this project, we introduced a workaround, namely, a stabilising force acting on the FERM domain of the FAK molecules. In \autoref{forceana}, we showed that this approach does not influence the observables used in the remaining part, but we are aware of its limitations (discussed in \autoref{forceana}) and still investigate possible alternatives, for example, flat-bottom pulling \autocite[p. 156-158]{gromacsManual}.\\
+In this project, we introduced a workaround, namely, a stabilising force acting on the FERM domain of the FAK molecules. In \autoref{forceana}, we showed that this approach does not influence the observables used in the remaining part, but we are aware of its limitations and still investigate possible alternatives, for example, flat-bottom pulling \autocite[p. 156-158]{gromacsManual}.\\
 \\
 From the configurations obtained for FAK in solution, we identified important residues contributing to the FERM-kinase interface. The observations fit well with experimental studies of \textcite{structFAK}. Also the burying of the active site of the kinase as well as the hiding of the autophosphorylation site were observed in the simulations.\\
 We compared these results to conformations obtained in FAK molecules bound to a \pip{}-containing membrane and identified configurational changes. They involve not only the promotion of the autophosphorylation site, but also a partial opening of the FERM-kinase interface at the activation loop of the kinase. These changes are consistent with previous studies on allosteric effects of \pip{} binding to FAK by \textcite{pap001} and \textcite{pap003}.\\
