--- a/results/forceAnalysis.tex
+++ b/results/forceAnalysis.tex
@@ -1,5 +1,5 @@
 \label{forceana}
-In setup 3 and setup 4, we stabilised each protein with an external force acting on the FERM domain (see \autoref{motivation}). To ensure that this restraining does not cause major artefacts, the force-dependency of the used observables is examined below.\\
+In setup 3 and setup 4, we stabilised each protein with an external force acting on the FERM domain (see \autoref{stabilising}). To ensure that this restraining does not cause major artefacts, the force-dependency of the used observables is examined below.\\
 \\
 The force has a mean value of $2.44\,\forceunit$ and a standard deviation of $21.80\,\forceunit$. Interestingly, the positive mean value shows that the proteins are rather pushed downwards than pulled up. This indicates that the stabilising force does not have to hold the protein upright the whole time. % TODO: clarify?
 \\
