--- a/introduction.tex
+++ b/introduction.tex
@@ -12,7 +12,7 @@ The FAT domain is linked to the kinase by a flexible proline-rich region. FAT li
 \begin{figure}
 	\centering
 	\includegraphics[height=6cm]{figures/introduction/fak}
-	\nicecaption{Structure of FAK}{The FERM domain consisting of F1 (green), F2 (iceblue) and F3 (blue) connected via the linker to the kinase consisting of N-lobe (violet), activation loop (black) and C-lobe (red). The basic patch (F2), \acid{Y}{397} (linker) and \acid{Y}{567}, \acid{Y}{577} (activation loop) are shown in atomistic representation.}
+	\nicecaption{Structure of FAK}{The FERM domain, consisting of F1 (green), F2 (iceblue) and F3 (blue), and the kinase, consisting of N-lobe (violet), activation loop (black) and C-lobe (red), are connected via the linker region (white). The basic patch (in F2), \acid{Y}{397} (in the linker) and \acid{Y}{567}, \acid{Y}{577} (in the activation loop) are shown in atomistic representation.}
 	\label{intro:fak}
 \end{figure}
 %
@@ -21,20 +21,18 @@ The FAT domain is linked to the kinase by a flexible proline-rich region. FAT li
 \section{\pip{} binding and activation}
 It is known that integrin signalling due to cell adhesion triggers activation of FAK and that \pip{} is an important mediator in this signalling pathway. FAK interacts in several ways with \pip{}, which is discussed in the following.\\
 \\
-In the autoinhibited conformation, the FERM domain shields the active site of the kinase. An activation of FAK therefore requires the dissociation of the FERM and the kinase \autocite{structFAK}.\\
-\pip{} is a phospholipid which is locally generated in FAs due to integrin signalling \autocite{pip2LocalGeneration}. Its charge depends strongly on the pH, but at physological conditions a net charge of -4 is the preferred state. However, in presence of basic amino acids (Arg, Lys), the deprotonated state gets promoted, resulting in a net charge of -5 \autocite{pip2_minus5}. The electrostatic binding of \pip{} to the basic patch in the F2 subdomain results in allosteric changes, which also influence the interface between the F1 subdomain and the N-lobe. Moreover, the linker region gets less strongly bound, which promotes autophosphorylation of \acid{Y}{397}. However, the \pip{} binding alone has no effect on the catalytic activity, which suggests that the FERM domain is still associated to the kinase \autocites{pap001}{pap003}. For activation, an additional stimulus, either biochemical or mechanical, is needed.\\
+In the autoinhibited conformation, the FERM domain shields the active site of the kinase. Therefore, an activation of FAK requires the dissociation of the FERM and the kinase \autocite{structFAK}.\\
+\pip{} is a phospholipid which is locally generated in FAs due to integrin signalling \autocite{pip2LocalGeneration}. Its charge depends strongly on the pH, but at physological conditions a net charge of -4 is the preferred state. However, in presence of basic amino acids (Arg, Lys), the deprotonated state gets promoted, resulting in a net charge of -5 \autocite{pip2_minus5}. The electrostatic binding of \pip{} to the basic patch in the F2 subdomain results in allosteric changes, which also influence the interface between the F1 subdomain and the N-lobe. Moreover, the linker region gets less strongly bound, which promotes autophosphorylation of \acid{Y}{397}. Because the \pip{} binding alone has no effect on the catalytic activity, which suggests that the FERM domain is still associated to the kinase \autocites{pap001}{pap003}. For activation, an additional stimulus, either biochemical or mechanical, is needed.\\
 \\
-If \acid{Y}{397} is phosphorylated, it becomes a suitable binding site for SH2 or SH3, which are subdomains of proteins of Src family tyrosine kinases. Due to the conformational changes induced by \pip{}, this kinase has access to \acid{Y}{576} and \acid{Y}{577}. As said, the phosphorylation of these residues makes FAK fully active, resulting in dissociation of the FERM domain and the kinase \autocite{pap001}.\\
+Autophosphorylation of \acid{Y}{397} is an important step in FAK activation. Once this site is phosphorylated, it becomes a suitable binding site for SH2 or SH3, which are subdomains of proteins of Src family tyrosine kinases. Due to the conformational changes induced by \pip{}, this kinase has access to \acid{Y}{576} and \acid{Y}{577}. As said, the phosphorylation of these residues makes FAK fully active, resulting in dissociation of the FERM domain and the kinase \autocite{pap001}. Once the activation loop is phosphorylated, the FERM domain cannot inhibit the kinase any more. Therefore, a dephosphorylation is required to downregulate FAK activity \autocite{structFAK}.\\
 \\
-Mechanical forces can lead to dissociation of the FERM domain from the kinase as well. Forces acting on the FAT domain are transduced to the interface of the FERM domain and the kinase because the linker is connected to the kinase, while the FERM domain is anchored onto a \pip{} containing membrane. These forces can lead to activation of FAK. In that way, it is acting as a mechanical sensor \autocite{pap004}.\\
+Mechanical forces can lead to dissociation of the FERM domain from the kinase as well. Forces acting on the FAT domain are transduced to the FERM-kinase interface because the linker is connected to the kinase, while the FERM domain is anchored onto a \pip{} containing membrane. These forces can lead to activation of FAK. In that way, it is acting as a mechanical sensor \autocite{pap004}.\\
 \\
-The binding sites on the side of the kinase were identified via computer simulations \autocite{pap002} and have been confirmed recently in experiments \autocite{pap002Exp}. The findings from \textcite{pap002Exp} show that these residues are required for catalytic activity of the kinase, and that they bind to phospholipids \textit{in vivo}. However, since the catalytic activity is not regulated by \pip{}, this binding was hypothesized to act as a stabilisation of the active state only \autocite{pap002Exp}.
-\section{Dimerization, clustering and autophosphorylation}
+The binding sites for \pip{} on the side of the kinase were identified via computer simulations \autocite{pap002} and have been confirmed recently in experiments \autocite{pap002Exp}. The findings from \textcite{pap002Exp} show that these residues are required for catalytic activity of the kinase, and that they bind to phospholipids \textit{in vivo}. However, since the catalytic activity is not regulated by \pip{} alone, this binding was hypothesized to act as a stabilisation of the active state only \autocite{pap002Exp}.
+\section{Dimerization and clustering}
 \label{intro:clustering}
-Autophosphorylation of \acid{Y}{397} is an important step in FAK activation. It has been shown that this happens in intact cells \textit{in trans}, for which a self-association of FAK is required \autocite{transAuto}.\\
+Experimental findings suggest that self-association of FAK, such as dimerization or clustering, can trigger autophosphorylation of \acid{Y}{397} \autocites{transAuto}{dimersVsClusters}.\\
 \\
-The FERM domain induces a dimerization of FAK by interacting with the FERM domain of a neighbouring FAK molecule. The interaction emerges around \acid{W}{266} in the connected FERM domains and is stabilised by an interaction of the FAT domain with the basic patch of the other FERM domain, respectively. The presence of \acid{W}{266} is also required for autophosphorylation of FAK.\\
-\pip{} is not needed for the dimerization of the FERM domains. However, an enriched FAK concentration is needed to observe FAK dimers in cells, which is the case at FAs. It is still unclear how the dimer is stabilised at membranes, where the basic patch is also required for ligand binding \autocite{fakdimers}.\\
-It has been shown that \textit{in trans} autophosphorylation of FAK is promoted by dimerization \autocite{dimersVsClusters}.\\
+The FERM domain induces a dimerization of FAK by interacting with the FERM domain of a neighbouring FAK molecule. The interaction emerges around \acid{W}{266} in the connected FERM domains and is stabilised by an interaction of the FAT domain with the basic patch of the other FERM domain, respectively. \pip{} is not required for the dimerization of the FERM domains. However, an enriched FAK concentration is needed to observe FAK dimers in cells, which is the case at FAs. It is still unclear how the dimer can be stabilised at membranes, where the basic patch is also required for ligand binding \autocite{fakdimers}.\\
 \\
-Albeit \pip{} is not required for dimerization, it induces clustering of several FAK molecules on the membrane \textit{in vitro} \autocite{pap001}. Because dimers support autophosphorylation of FAK, it is not surprising that the same effect is observed in clusters. However, these clusters can trigger additional biochemical stimuli \autocite{dimersVsClusters} and may play an important role in the scaffolding function of FAK for FAs \autocite{pap001}.
+\pip{} does not only induce conformational changes, but also clustering of several FAK molecules on the membrane \textit{in vitro} \autocite{pap001}. In contrast to dimers, clusters of FAK molecules can trigger additional biochemical stimuli \autocite{dimersVsClusters} and may play an important role in the scaffolding function of FAK for FAs \autocite{pap001}.
